--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,26 @@ smol = "2.0.2"
 smolscale2 = "0.6.0"
 smoltimeout = "0.6.2"
 sqlx = { optional = true, version = "0.8.2", features = ["runtime-async-std", "sqlite"], default-features = false }
+
+[profile.dev]
+panic = "unwind"
+opt-level = 2
+lto = "off"
+#strip = "none"
+codegen-units = 256
+overflow-checks = true
+debug-assertions = true
+debug = "limited"
+incremental = true
+
+[profile.release]
+panic = "unwind"
+opt-level = 3
+lto = true
+strip = true
+codegen-units = 1
+overflow-checks = true
+debug-assertions = false
+debug = 1
+incremental = false
+
